--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
-    "express": "^4.18.2",
     "dotenv": "^16.0.3",
-    "mongodb": "^5.5.0"
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "sharp": "^0.32.1"
   }
 }
