--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
+    "googleapis": "^105.0.0",
     "@types/express": "^4.17.17",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
